--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "elemind/filament-echarts": "^1.1",
         "filament/filament": "^5.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "relaticle/flowforge": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
